# GMESDataset

./: .gitignore  DATAFOLDER  EXPERIMENT_CODE_ROADMAP.md  PetroPhysicsConvert.md  README.md  README_CN.md  README_FORWARD_OUTPUTS.md  build_pretraining_dataset.py  fix_plot.py  model_qc_report.py  plot_saved_forward_data.py  project.md  run_all_anomalies_viz.py  run_batch_multiphysics_forward.sh  run_demo copy.py  run_demo.py  run_demo_bak.py  run_joint_inversion_when_gpu1_idle.sh  run_large_scale_forward_modeling.sh  run_large_scale_model_generation.sh  run_multiphysics_forward.py  run_multiphysics_viz.py  run_one_pretraining_sample_demo.sh  run_pretraining_forward_from_models.py  run_preview_10_models.sh  run_separate_anomalies_viz.py  save_slices_matplotlib.py  visualize_pretraining_sample.py
Electrical/forward_modeling/: AGENTS.md  CMakeLists.txt  PLANS.md  README_mfem.md  forward_module.cpp  mt_forward.py  plot_test_forward_debug.py  setup.py  test_forward.py  test_forward_debug.py  test_forward_plot.py  test_multigpu_copy.py  test_operator.py  visulize.py
Electrical/forward_modeling/apps/: mt_forward_cli.cpp
Electrical/forward_modeling/bindings/: pybind_module.cpp
Electrical/forward_modeling/include/: boundaryConditions3d.h  femAssemble3d.h  gpuComplexSolver.h  gpuIterativeSolver.h  mt_background_1d.hpp  mt_boundary_conditions.hpp  mt_config.hpp  mt_driver.hpp  mt_observations.hpp  mt_solver.hpp  mt_tensor_mesh.hpp  mt_tensor_model.hpp  mt_types.hpp
Electrical/forward_modeling/legacy_cuda/: __init__.py  test_forward.py  test_forward_debug.py  test_forward_multigpu.py  test_multigpu.py  test_saturation.py  test_single_freq.py
Electrical/forward_modeling/legacy_cuda/include/: boundaryConditions3d.h  femAssemble3d.h  gpuIterativeSolver.h  mesh3d.h
Electrical/forward_modeling/legacy_cuda/src/: boundaryConditions3d.cpp  femAssemble3d.cpp  gpuBoundaryPostprocess.cu
Electrical/forward_modeling/src/: boundaryConditions3d.cpp  emforward3d.cpp  femAssemble3d.cpp  gpuAssemble3d.cu  gpuComplexSolver.cu  gpuIterativeSolver.cu  mesh3d.cpp  mt_background_1d.cpp  mt_boundary_conditions.cpp  mt_driver.cpp  mt_observations.cpp  mt_solver.cpp  mt_tensor_mesh.cpp  mt_tensor_model.cpp
Electrical/forward_modeling/tests/: test_frequency_order.py  test_halfspace_smoke.py  test_interface_compat.py  test_mfem_backend_smoke.py  test_migration_docs.py
Electrical/forward_modeling/tools/: build_cuda_stack.sh
Magnetic/: forward_mag.m
configs/: anomalies.yaml  anomalies_brine_fault_zone.yaml  anomalies_hydrocarbon_hydrate.yaml  anomalies_salt.yaml  anomalies_sediment_basement.yaml  pretraining_anomaly_randomization.yaml
core/: builder.py  label_volume.py  multiphysics.py  presets.py  viz_utils.py
experiments/: __init__.py  analyze_mt_frequency_axes.py  audit_dataset.py  eval_classification.py  eval_consistency_shuffle.py  eval_forward.py  eval_missing_modalities.py  summarize_forward_results.py  train_classification.py  (+2 more)
(+144 files in other folders)
